src/objects/pse__Assignment__c.object
<CustomObject>
    <fields>
        <fullName>pse__Source__c</fullName>
        <description>If set, this indicates how the assignment was created.</description>
        <inlineHelpText>If set, this indicates how the assignment was created.</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Assign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>pse__Schedule__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                    <default>true</default>
                    <label>Tentative</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Currency_Code__c</fullName>
        <label>Suggested Bill Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Number__c</fullName>
        <label>Suggested Bill Rate Number</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate__c</fullName>
        <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Suggested_Bill_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Bill Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Team_Member_Swap_Date__c</fullName>
        <description>This field shows the date on which most recent swap occurred. Note this field is only used in the swap shift functionality in Team Schedule Planner.</description>
        <inlineHelpText>This field shows the date on which most recent swap occurred. Note this field is only used in the swap shift functionality in Team Schedule Planner.</inlineHelpText>
        <label>Team Member Swap Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Team_Member_Swapped_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field shows the most recent resource who was previously assigned to the assignment before the action of shift swap. Note this field is used in the swap shift functionality in Team Schedule Planner.</description>
        <inlineHelpText>This field shows the most recent resource who was previously assigned to the assignment before the action of shift swap. Note this field is used in the swap shift functionality in Team Schedule Planner.</inlineHelpText>
        <label>Team Member Swapped Out</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments (Team Member Swapped Out)</relationshipLabel>
        <relationshipName>Assignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule_Slot_Key__c</fullName>
        <description>A list of the related Project, Resource, and Team Schedule Slot IDs.</description>
        <inlineHelpText>A list of the related Project, Resource, and Team Schedule Slot IDs.</inlineHelpText>
        <label>Team Schedule Slot Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule_Slot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team schedule slot.</description>
        <inlineHelpText>The team schedule slot.</inlineHelpText>
        <label>Team Schedule Slot</label>
        <referenceTo>pse__Team_Schedule_Slot__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Third_Party_Expenses_App_Correlation_ID__c</fullName>
        <description>Unique identifier of the assignment in a third-party expenses application. Used for synchronization.</description>
        <inlineHelpText>Unique identifier of the assignment in a third-party expenses application. Used for synchronization.</inlineHelpText>
        <label>Third-Party Expenses App Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard External Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard External Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard Internal Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard Internal Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Use_Project_Currency_For_Resource_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Project Currency For Resource Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Currency_For_Resource_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Currency For Resource Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Default_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Default Cost Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Default_Cost_Rate_as_Daily__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Default Cost Rate as Daily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Run__c</fullName>
        <description>The ID of the utilization run that most recently processed this assignment.</description>
        <inlineHelpText>The ID of the utilization run that most recently processed this assignment.</inlineHelpText>
        <label>Utilization Run</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>Assignments</fullName>
        <columns>NAME</columns>
        <columns>Resource_Request_Type__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>Budget_Deliverable__c</columns>
        <columns>Resource_Sub_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Resource_User_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Assignments</label>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <recordTypes>
        <fullName>OWF_Assignment</fullName>
        <active>true</active>
        <description>OWF-MC-ESPSFDCQI-2135</description>
        <label>OWF Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>RDS_Assignment</fullName>
        <active>true</active>
        <description>PSA-CLD-USNONE - Assignment used by the R&amp;DS organization</description>
        <label>RDS Assignment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASN_VR01_OWF_OwnerOrTM_CanChangeResource</fullName>
        <active>true</active>
        <description>OWF- MC-ESPSFDCQI-3125 - Validates only Triage Managers and assignment owners can change the resource assigned to an assignment.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName == &apos;OWF_Assignment&apos;,
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
ISCHANGED( pse__Resource__c ), 
NOT(OR( 
$User.Id = PRIORVALUE(OwnerId), 
$Permission.OWF_Triage_Manager )))</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>Only Triage Managers and assignment owners can change the resource assigned to an assignment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASN_VR01_PSA_RDSASNMustbeatServiceLine</fullName>
        <active>true</active>
        <description>PSA-USNONE-VR-RDS Assignments need to be on the Service Line Project</description>
        <errorConditionFormula>ISNEW() &amp;&amp;  RecordType.DeveloperName = &apos;RDS_Assignment&apos; &amp;&amp; pse__Project__r.RecordType.DeveloperName != &apos;RDS_Service_Line&apos; &amp;&amp;  ISPICKVAL(pse__Project__r.pse__Project_Type__c, &apos;Customer Project&apos;)</errorConditionFormula>
        <errorMessage>RDS Assignments need to be on the Service Line Project for Customer Projects</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASN_VR02_OWF_MustInclude_RejectedReason</fullName>
        <active>true</active>
        <description>OWF- MC-ESPSFDCQI-2289-Validates that the Rejected Reason Field has Value if the Status is &apos;Rejected&apos;.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName == &apos;OWF_Assignment&apos;,
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,ISPICKVAL(pse__Status__c, &quot;Rejected&quot;), ISBLANK(Rejected_Reason__c))</errorConditionFormula>
        <errorDisplayField>Rejected_Reason__c</errorDisplayField>
        <errorMessage>Rejected Reason is required once the status is changed to Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASN_VR05_OWF_CheckProjectAgreementValue</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
NOT(ISNEW()),
RecordType.DeveloperName == &apos;OWF_Assignment&apos;, 
Bid_History__c != pse__Project__r.Bid_History__c
)</errorConditionFormula>
        <errorMessage>Bid History on this should be same as Project Agreement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASN_VR07_OWF_ResNotAvailableForTriage</fullName>
        <active>true</active>
        <description>OWF-Do not allow assignment creation if the resource is not available for triage</description>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
ISNEW(), 
RecordType.DeveloperName == &apos;OWF_Assignment&apos;, 
pse__Resource_Request__c != NULL,
NOT( pse__Resource__r.Available_for_Triage_Flag__c )
)</errorConditionFormula>
        <errorMessage>This assignment cannot be created because the resource is not available for triage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASN_VR08_OWF_OnlyActiveSFUserShouldAssgn</fullName>
        <active>true</active>
        <description>Resource should not be assigned if the related salesforce user is Inactive.</description>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
RecordType.DeveloperName == &apos;OWF_Assignment&apos;,
ISCHANGED( pse__Status__c ) ,
NOT(ISPICKVAL(pse__Status__c, &apos;Closed&apos;)),
NOT(ISPICKVAL(pse__Status__c, &apos;Cancelled&apos;)),


OR(pse__Resource__r.pse__Salesforce_User__c==NULL,
		pse__Resource__r.pse__Salesforce_User__r.IsActive == FALSE)

)</errorConditionFormula>
        <errorMessage>Assignment Cannot be created/updated because the related Salesforce User is Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASN_VR09_OWF_CantUpdateStatus</fullName>
        <active>true</active>
        <description>Status of Assignment should not be updated if the Assignment&apos;s Status is &apos;Rejected&apos; or related  Resource Request&apos;s status is &apos;Cancelled&apos;.</description>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
NOT(ISNEW()), 
RecordType.DeveloperName == &apos;OWF_Assignment&apos;,
AND(
ISCHANGED(pse__Status__c),
OR( 
ISPICKVAL(PRIORVALUE(pse__Status__c),&apos;Rejected&apos;)
, 
ISPICKVAL(PRIORVALUE(pse__Status__c), &apos;Cancelled&apos;)
) 
))</errorConditionFormula>
        <errorMessage>The Status of this Assignment cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASN_VR10_OWF_Cant_Update_Accpt_to_Pendng</fullName>
        <active>true</active>
        <description>OWF - ESPSFDCQI-4784.Cannot update the status from Accepted to Pending</description>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
NOT(ISNEW()), 
RecordType.DeveloperName == &apos;OWF_Assignment&apos;, 
AND( 
ISCHANGED(pse__Status__c), 
ISPICKVAL( pse__Status__c , &apos;Pending&apos;),
ISPICKVAL(PRIORVALUE(pse__Status__c), &apos;Accepted&apos;)   
))</errorConditionFormula>
        <errorMessage>Accepted Assignment cannot move to Pending Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASN_VR11_OWF_EstimatedEffort</fullName>
        <active>false</active>
        <description>ESPSFDCQI-2180  - If the status not equal to Accepted, Estimated Effort cannot be edited</description>
        <errorConditionFormula>AND( 
		$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
OR(
		IF( ISPICKVAL( pse__Status__c , &apos;Pending&apos;) ,  ISCHANGED( Estimation_Effort__c ) ,
		IF( ISPICKVAL( pse__Status__c , &apos;Closed&apos;) ,  ISCHANGED( Estimation_Effort__c ) ,
		IF( ISPICKVAL( pse__Status__c , &apos;Cancelled&apos;) ,  ISCHANGED( Estimation_Effort__c ) ,
		IF( ISPICKVAL( pse__Status__c , &apos;Rejected&apos;) ,  ISCHANGED( Estimation_Effort__c ) , False ))))
)
)</errorConditionFormula>
        <errorDisplayField>Estimation_Effort__c</errorDisplayField>
        <errorMessage>You cannot edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Currency_is_Constant</fullName>
        <active>true</active>
        <description>An Assignment&apos;s Currency field value may not be updated once set.</description>
        <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>An Assignment&apos;s Currency field value may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_May_Not_Be_Billable</fullName>
        <active>true</active>
        <description>An Assignment may only be marked &apos;Is Billable&apos; if it is for a Billable Project.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c, NOT(ISNULL(pse__Project__c)), (pse__Project__c &lt;&gt; &apos;&apos;),  NOT(pse__Project__r.pse__Is_Billable__c))</errorConditionFormula>
        <errorDisplayField>pse__Is_Billable__c</errorDisplayField>
        <errorMessage>An Assignment may only be marked &apos;Is Billable&apos; if it is for a Billable Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Project_is_Constant</fullName>
        <active>true</active>
        <description>An Assignment&apos;s Project field value may not be blank and may not be updated once set.</description>
        <errorConditionFormula>OR(ISNULL(pse__Project__c),LEN(pse__Project__c)=0,ISCHANGED(pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Project field value may not be blank and may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Resource_is_Constant</fullName>
        <active>false</active>
        <description>An Assignment&apos;s Resource field value can not be changed.</description>
        <errorConditionFormula>ISCHANGED(pse__Resource__c)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Resource field value can not be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Resource_is_Required</fullName>
        <active>false</active>
        <description>An Assignment&apos;s Resource field value may not be blank.</description>
        <errorConditionFormula>ISBLANK(pse__Resource__c)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Resource field value may not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Bill_Rate_Required</fullName>
        <active>true</active>
        <description>This validation rule forces Bill Rate on Assignment to be required in effect, even if the Bill Rate field itself is eventually marked as NOT required to allow access limitations on it.</description>
        <errorConditionFormula>ISNULL(pse__Bill_Rate__c)</errorConditionFormula>
        <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
        <errorMessage>Assignment requires a Bill Rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Billable_Assignments_may_not_be_Credited</fullName>
        <active>true</active>
        <description>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Credited__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Credited__c</errorDisplayField>
        <errorMessage>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Billable_Assignments_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Assignments may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
        <errorMessage>Assignments may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Credited_Assignments_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Assignments may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</description>
        <errorConditionFormula>AND(pse__Time_Credited__c,pse__Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
        <errorMessage>Assignments may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Max_One_Default_Resource_Cost_Currency</fullName>
        <active>true</active>
        <description>At most one of the two override checkboxes may be set for which currency to hold Resource Cost Rates constant in - Resource or Project.  If neither is checked, the default config is used.</description>
        <errorConditionFormula>AND(pse__Use_Project_Currency_For_Resource_Cost__c,pse__Use_Resource_Currency_For_Resource_Cost__c)</errorConditionFormula>
        <errorMessage>At most one of the two override checkboxes may be set for which currency to hold Resource Cost Rates constant in - Resource or Project.  If neither is checked, the default config is used.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Non_Billable_Bill_Rate_must_be_Zero</fullName>
        <active>true</active>
        <description>Assignments marked non-billable may not have a bill rate greater than zero.</description>
        <errorConditionFormula>AND(NOT(pse__Is_Billable__c),NOT(pse__Bill_Rate__c = 0.0))</errorConditionFormula>
        <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
        <errorMessage>Assignments marked non-billable may not have a bill rate greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__cannot_switch_schedule_records</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(pse__Schedule__c)</errorConditionFormula>
        <errorDisplayField>pse__Schedule__c</errorDisplayField>
        <errorMessage>You cannot switch the schedule record once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__select_resource</fullName>
        <active>true</active>
        <errorConditionFormula>( 
	ISNEW() 
	||
	ISCHANGED( pse__Resource__c) 
) 
&amp;&amp;  
( 
	NOT(pse__Resource__r.pse__Is_Resource__c) 
	||  
	NOT(pse__Resource__r.pse__Is_Resource_Active__c) 
)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>You must select an active resource.</errorMessage>
    </validationRules>
</CustomObject>